--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-body{
+body {
   width: 100vw;
   height: 100vh;
   margin: 0;
@@ -15,6 +13,21 @@ body{
   overflow-x: hidden;
 }
 
-.pod{
+.pod {
   cursor: pointer;
+  box-shadow: inset 0px 10px 10px 0px rgba(0, 0, 2, 1);
+}
+
+.playerTwoTile {
+  cursor: pointer;
+  box-shadow: inset 7px -11px 8px 15px rgb(245, 124, 3);
+  /* background: radial-gradient(circle at 20px 20px, #60a7f3, rgb(1, 33, 91)); */
+  background-color: rgb(251, 172, 25);
+}
+
+.playerOneTile {
+  cursor: pointer;
+  box-shadow: inset 7px -11px 8px 15px rgb(1, 74, 212);
+  /* background: radial-gradient(circle at 20px 20px, #60a7f3, rgb(1, 33, 91)); */
+  background-color: rgb(95, 150, 251);
 }
