--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,23 +11,58 @@ body {
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
+  background: #E0EAFC;  /* fallback for old browsers */
+  background: linear-gradient(220.55deg, #FFED46 0%, #FF7EC7 100%);
 }
 
 .pod {
-  cursor: pointer;
-  box-shadow: inset 0px 10px 10px 0px rgba(0, 0, 2, 1);
+  cursor: pointer !important;
+  background-color: #fef28765 ;
+  box-shadow: inset 0px 12px 0px 0px rgba(0, 0, 2, 1);
+}
+
+.grid-box{
+  background-color: #E0EAFC;
 }
 
 .playerTwoTile {
   cursor: pointer;
   box-shadow: inset 7px -11px 8px 15px rgb(245, 124, 3);
   /* background: radial-gradient(circle at 20px 20px, #60a7f3, rgb(1, 33, 91)); */
-  background-color: rgb(251, 172, 25);
+  background-color: rgb(251, 172, 25) !important;
 }
 
 .playerOneTile {
   cursor: pointer;
   box-shadow: inset 7px -11px 8px 15px rgb(1, 74, 212);
   /* background: radial-gradient(circle at 20px 20px, #60a7f3, rgb(1, 33, 91)); */
-  background-color: rgb(95, 150, 251);
+  background-color: rgb(95, 150, 251) !important;
+}
+
+.tile {
+  box-shadow:-6px 7px 0px 0px rgba(0, 0, 2, 1);
+}
+
+.mask{
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+
+.mask-active{
+  background-color: rgba(0, 0, 0, 0.331);
+  visibility: 1;
+  z-index: 100;
+}
+
+.mask-disabled{
+  visibility: 0;
+  z-index: -100;
 }
